removed private preview, replaced with preview

--- a/learn-m365-pr/m365/ensure-okr-program-success/index.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Ensure OKR program success
-summary: Learn how to set your OKR program up for success by creating psychological safety, establishing business rhythms, and making the OKR change visible to your team.   <br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Learn how to set your OKR program up for success by creating psychological safety, establishing business rhythms, and making the OKR change visible to your team.   <br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
   - Define the growth mindset, psychological safety, and how to cultivate this kind of environment on your team as you roll out OKRs. 
