--- a/learn-m365-pr/m365/role-of-champion/index.yml
+++ b/learn-m365-pr/m365/role-of-champion/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Role of an OKR Champion
-summary: Learn about your role as an OKR Champion, how to communicate effectively and what resources are available to set you and your team up for success.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Learn about your role as an OKR Champion, how to communicate effectively and what resources are available to set you and your team up for success.<br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Define the role of an OKR Champion
