--- a/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Learn OKR essentials with Viva Goals
-summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.<br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Define the key components of an OKR and articulate how they fit together in the OKR framework.
