--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/index.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Engage with activity and report on data with Viva Goals
-summary: Learn how to use Viva Goals to engage with others and leverage the data that exists within your instance. <br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Learn how to use Viva Goals to engage with others and leverage the data that exists within your instance. <br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Engage with activity within Viva Goals
