--- a/learn-m365-pr/m365-developer/identity-permissions-consent/3-exercise-understand-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/3-exercise-understand-permissions-consent.yml
@@ -2,7 +2,7 @@
 uid: learn-m365.identity-permissions-consent.3-exercise-create-a-single-page-app
 metadata:
   title: Exercise - Create a single page app
-  description: In this unit, you'll create a single page app to test the delegated permissions and the consent experience
+  description: In this unit, you'll create a single page app to test the delegated permissions and the consent experience.
   ms.date: 04/27/2022
   author: omondiatieno
   ms.author: jomondi
@@ -11,4 +11,4 @@ metadata:
 title: Exercise - Create a single page app
 durationInMinutes: 15
 content: |
-  [!include[](includes/3-exercise-create-nodejs-spa.md)]
+  [!include[](includes/3-exercise-understand-permissions-consent.md)]
