changed LP descriptions

--- a/learn-m365-pr/paths/okr-leadership/index.yml
+++ b/learn-m365-pr/paths/okr-leadership/index.yml
@@ -2,14 +2,14 @@
 uid: learn-m365-pr.okr-leadership
 metadata:
   title: OKR Leadership Program - Become an OKR Champion with Viva Goals
-  description: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the elements of the OKR framework including writing, software, and program success.
+  description: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the role of the OKR Champion, as well as elements of the OKR framework including OKR writing, ensuring program success, and an introduction to Viva Goals.
   ms.date: 05/09/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: OKR Leadership Program - Become an OKR Champion with Viva Goals
-summary: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the elements of the OKR framework including writing, software, and program success.
+summary: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the role of the OKR Champion, as well as elements of the OKR framework including OKR writing, ensuring program success, and an introduction to Viva Goals.<br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 prerequisites: |
   - None
 iconUrl: /learn/achievements/generic.svg
