FY22Q4 refresh - msgraph-dotnet-core-access-user-events
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- update module style to match other msgraph modules
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/msgraph-dotnet-core-access-user-events/index.yml
+++ b/learn-m365-pr/m365-developer/msgraph-dotnet-core-access-user-events/index.yml
@@ -23,7 +23,7 @@ prerequisites: |
   - Basic understanding of [authentication and authorization](/learn/modules/getting-started-identity/?WT.mc_id=m365-30352-cxa) on Microsoft 365
   - Basic understanding of HTML, C#, and [ASP.NET Core](/aspnet/core/razor-pages/?WT.mc_id=m365-30352-cxa)
   - Basic understanding of [Microsoft Graph](/learn/modules/msgraph-intro-overview/?WT.mc_id=m365-30352-cxa)
-  - [.NET Core 5 (or higher) SDK installed](https://dot.net?WT.mc_id=m365-30352-cxa)
+  - [.NET Core 5 SDK installed](https://dot.net?WT.mc_id=m365-30352-cxa)
 iconUrl: /learn/achievements/graph-calendar-events.svg
 levels:
   - intermediate
