--- a/learn-m365-pr/m365-developer/msgraph-manage-files/3-connect-javascript-app.yml
+++ b/learn-m365-pr/m365-developer/msgraph-manage-files/3-connect-javascript-app.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.msgraph-manage-files.3-connect-javascript-app
 metadata:
   title: Connect a JavaScript app to Microsoft 365
-  description: In this unit, you'll learn about why you should consider connecting your apps to Microsoft 365. You'll also learn about Microsoft Graph, the API to access data and insights from Microsoft 365, and how to authenticate with it through Azure Active Directory.
-  ms.date: 03/01/2022
+  description: In this unit, you'll learn why you should consider connecting your apps to Microsoft 365. You'll also learn about Microsoft Graph, the API to access data and insights from Microsoft 365, and how to authenticate with it through Azure Active Directory.
+  ms.date: 05/03/2022
   author: BobGerman
   ms.author: rogerman
   ms.topic: interactive-tutorial
