--- a/learn-m365-pr/m365-developer/msgraph-manage-files/9-upload-user-files.yml
+++ b/learn-m365-pr/m365-developer/msgraph-manage-files/9-upload-user-files.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.msgraph-manage-files.9-upload-user-files
 metadata:
   title: Exercise - Connect a JavaScript app to Microsoft 365
-  description: In this exercise, you'll create a simple JavaScript app. You'll configure it to use your Azure Active Directory application registration and let users sign in with their work account by using the Microsoft Authentication Library SDK.
-  ms.date: 03/01/2022
+  description: In this exercise, you'll create a JavaScript app. You'll configure it to use your Azure Active Directory application registration and let users sign in with their work account by using the Microsoft Authentication Library SDK.
+  ms.date: 05/03/2022
   author: BobGerman
   ms.author: rogerman
   ms.topic: interactive-tutorial
