FY22Q4 refresh - msgraph-toolkit-intro
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- update module style to match other msgraph modules
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/msgraph-toolkit-intro/6-exercise-show-m365-data.yml
+++ b/learn-m365-pr/m365-developer/msgraph-toolkit-intro/6-exercise-show-m365-data.yml
@@ -2,7 +2,7 @@
 uid: learn-m365.mgt-intro.6-exercise-show-m365-data
 metadata:
   title: Exercise - Show data from Microsoft 365
-  description: In this exercise, you’ll practice using the Graph Toolkit to show data from Microsoft 365.
+  description: In this exercise, you'll practice using the Graph Toolkit to show data from Microsoft 365.
   ms.date: 03/01/2022
   author: aycabas
   ms.author: aycabas
