--- a/learn-m365-pr/m365-developer/msgraph-toolkit-intro/4-exercise-sign-into-app.yml
+++ b/learn-m365-pr/m365-developer/msgraph-toolkit-intro/4-exercise-sign-into-app.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.mgt-intro.4-exercise-sign-in-app
 metadata:
   title: Exercise - Sign in to your app by using Microsoft Graph Toolkit Login component
-  description: In this exercise, you’ll practice using the Login component of the Graph Toolkit to sign in to your app.
-  ms.date: 03/01/2022
+  description: In this exercise, you'll practice using the Login component of the Graph Toolkit to sign in to your app.
+  ms.date: 05/04/2022
   author: rabwill
   ms.author: rwilliams
   ms.topic: interactive-tutorial
