--- a/learn-m365-pr/paths/m365-cloud-app-security-fundamentals/index.yml
+++ b/learn-m365-pr/paths/m365-cloud-app-security-fundamentals/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Secure cloud apps using Microsoft Defender for Cloud Apps
   description: Learn how Microsoft Defender for Cloud Apps can help you proactively identify and defeat app-based security threats across your organization, in Microsoft cloud services, and those services provided by other vendors. 
   ms.date: 05/12/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Secure cloud apps using Microsoft Defender for Cloud Apps
