Updates index file

--- a/learn-m365-pr/m365/advanced-scenarios-guidance/index.yml
+++ b/learn-m365-pr/m365/advanced-scenarios-guidance/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Configure advanced scenarios in Microsoft Defender for Cloud Apps
   description: Use advanced features of Microsoft Defender for Cloud Apps to protect more devices, integrate with other products, and customize security tools.
   ms.date: 04/28/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Configure advanced scenarios in Microsoft Defender for Cloud Apps
