--- a/learn-m365-pr/m365/information-protection-microsoft-cloud-app-security/index.yml
+++ b/learn-m365-pr/m365/information-protection-microsoft-cloud-app-security/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Implement information protection using Microsoft Defender for Cloud Apps
   description: Learn how to connect apps to Microsoft Defender for Cloud Apps and deploy Conditional App Access Control.
   ms.date: 01/18/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Implement information protection using Microsoft Defender for Cloud Apps
