--- a/learn-m365-pr/m365/m365-security-azure-security-center/index.yml
+++ b/learn-m365-pr/m365/m365-security-azure-security-center/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Improve your cloud security posture with Microsoft Defender for Cloud
   description: Learn how you can strengthen your security posture through Microsoft Defender for Cloud.
   ms.date: 04/22/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Improve your cloud security posture with Microsoft Defender for Cloud
