--- a/learn-m365-pr/m365/configure-microsoft-cloud-app-security-initial-settings/index.yml
+++ b/learn-m365-pr/m365/configure-microsoft-cloud-app-security-initial-settings/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Configure Microsoft Defender for Cloud Apps initial settings
   description: Learn to configure the initial Microsoft Defender for Cloud Apps settings, such as IP addresses, user groups, admin roles, and Managed Security Service Provider access.
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Configure Microsoft Defender for Cloud Apps initial settings
