--- a/learn-m365-pr/m365/defender-identity-defend-attacks/index.yml
+++ b/learn-m365-pr/m365/defender-identity-defend-attacks/index.yml
@@ -5,8 +5,8 @@ metadata:
   title: Defend against attacks with Microsoft Defender for Identity
   description:  Learn how Microsoft Defender for Identity helps you to protect your environment against different types of threats by enabling you to detect and investigate attempts to compromise credentials, lateral movement attacks, reconnaissance activity, and more.
   ms.date: 03/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Defend against attacks with Microsoft Defender for Identity
