--- a/learn-m365-pr/m365/defender-identity-plan/index.yml
+++ b/learn-m365-pr/m365/defender-identity-plan/index.yml
@@ -5,8 +5,8 @@ metadata:
   title: Plan for Microsoft Defender for Identity 
   description: Get an overview of the concepts and tools that will help you implement Microsoft Defender for Identity in your organization including components, such as the sensors, the portal, capacity planning, the setup process, and more.
   ms.date: 08/17/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Plan for Microsoft Defender for Identity
