--- a/learn-m365-pr/m365/discover-additional-blogs-microsoft-cloud-app-security/index.yml
+++ b/learn-m365-pr/m365/discover-additional-blogs-microsoft-cloud-app-security/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Discover additional resources for Microsoft Defender for Cloud Apps
   description: Learn where to find more information to help you to manage and administer Microsoft Defender for Cloud Apps. Keep up to date with announcements about Defender for Cloud Apps.
   ms.date: 05/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Discover additional resources for Microsoft Defender for Cloud Apps
