--- a/learn-m365-pr/m365/implement-cloud-app-security-cloud-discovery/index.yml
+++ b/learn-m365-pr/m365/implement-cloud-app-security-cloud-discovery/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Implement Microsoft Defender for Cloud Apps Cloud Discovery
   description: Learn how to configure Cloud Discovery in Microsoft Defender for Cloud Apps, to integrate with Microsoft Defender for Endpoint, and how to integrate with non-Microsoft systems.
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Implement Microsoft Defender for Cloud Apps Cloud Discovery
