--- a/learn-m365-pr/m365/implement-microsoft-cloud-app-security-threat-detection/index.yml
+++ b/learn-m365-pr/m365/implement-microsoft-cloud-app-security-threat-detection/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Detect threats with Microsoft Defender for Cloud Apps
   description: Learn to identify, mitigate, and automatically remediate security threats by using Microsoft Defender for Cloud Apps and Microsoft Defender for Identity.
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Detect threats with Microsoft Defender for Cloud Apps
