--- a/learn-m365-pr/m365/information-protection-real-time-controls/index.yml
+++ b/learn-m365-pr/m365/information-protection-real-time-controls/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Protect information in real time with Microsoft Defender for Cloud Apps
   description: Learn to configure information protection in Microsoft Defender for Cloud Apps and protect data stored in all locations, including non-Microsoft services.
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Protect information in real time with Microsoft Defender for Cloud Apps
