--- a/learn-m365-pr/m365/integrate-third-party-identity-providers-microsoft-cloud-app-security/index.yml
+++ b/learn-m365-pr/m365/integrate-third-party-identity-providers-microsoft-cloud-app-security/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Integrate third-party identity providers with Microsoft Defender for Cloud Apps
   description: Learn how to integrate and manage third-party identity providers with Microsoft Defender for Cloud Apps.
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Integrate third-party identity providers with Microsoft Defender for Cloud Apps
