--- a/learn-m365-pr/m365/introduction-cloud-app-security/index.yml
+++ b/learn-m365-pr/m365/introduction-cloud-app-security/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Introduction to Microsoft Defender for Cloud Apps
   description: Introduction to Microsoft Defender for Cloud Apps
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Introduction to Microsoft Defender for Cloud Apps
