--- a/learn-m365-pr/m365/microsoft-cloud-app-security-brokers/index.yml
+++ b/learn-m365-pr/m365/microsoft-cloud-app-security-brokers/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Implement app security best practices with cloud access security brokers
   description: Learn about cloud access security brokers, including use cases and best practices.
   ms.date: 11/05/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Implement app security best practices with cloud access security brokers
