--- a/learn-m365-pr/m365/microsoft-cloud-app-security-power-automate/index.yml
+++ b/learn-m365-pr/m365/microsoft-cloud-app-security-power-automate/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Automate Microsoft Defender for Cloud Apps with Power Automate
   description: Learn how to use automation with Power Automate to manage alerts in Microsoft Defender for Cloud Apps.
   ms.date: 04/27/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Automate Microsoft Defender for Cloud Apps with Power Automate
