--- a/learn-m365-pr/m365/microsoft-cloud-app-security-threat-detection/index.yml
+++ b/learn-m365-pr/m365/microsoft-cloud-app-security-threat-detection/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Implement threat detection using Microsoft Defender for Cloud Apps
   description: Learn about the threat detection capabilities of Microsoft Defender for Cloud Apps.
   ms.date: 01/13/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Implement threat detection using Microsoft Defender for Cloud Apps
