--- a/learn-m365-pr/wwl/introduction-to-security-solutions-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/introduction-to-security-solutions-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.introduction-to-security-solutions-microsoft-365
 metadata:
   title: Explore security solutions in Microsoft 365 Defender
   description: "Explore security solutions in Microsoft 365 Defender"
-  ms.date: 05/16/2022
+  ms.date: 05/17/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -30,6 +30,12 @@ roles:
 products:
 - m365
 - office-365
+subjects:
+- cloud-security
+- information-protection-governance
+- insider-risk
+- security
+- threat-protection
 units:
 - learn.wwl.introduction-to-security-solutions-microsoft-365.introduction
 - learn.wwl.introduction-to-security-solutions-microsoft-365.enhance-your-email-security-using-microsoft-defender-for-office-365
