--- a/learn-m365-pr/paths/m365-cloud-security/index.yml
+++ b/learn-m365-pr/paths/m365-cloud-security/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Safeguard multi-cloud apps and resources with cloud security solutions from Microsoft
   description: Learn how Azure can provide comprehensive security for your organization's estate. 
   ms.date: 05/27/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Safeguard multi-cloud apps and resources with cloud security solutions from Microsoft
