--- a/learn-m365-pr/wwl/evaluate-your-compliance-readiness/index.yml
+++ b/learn-m365-pr/wwl/evaluate-your-compliance-readiness/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Evaluate your compliance readiness
-summary: This module examines the tools provided by Microsoft 365 to ensure an organization's regulatory compliance, with a special focus on the Microsoft Purview Compliance Portal and formulating an organization's compliance score.
+summary: This module examines the tools provided by Microsoft 365 to ensure an organization's regulatory compliance, with a special focus on the Microsoft Purview compliance portal and formulating an organization's compliance score.
 abstract: |
   By the end of this module, you will be able to:
   - Describe the Microsoft Purview Compliance Portal and how to access it
