--- a/learn-m365-pr/wwl/evaluate-your-compliance-readiness/index.yml
+++ b/learn-m365-pr/wwl/evaluate-your-compliance-readiness/index.yml
@@ -12,7 +12,7 @@ title: Evaluate your compliance readiness
 summary: This module examines the tools provided by Microsoft 365 to ensure an organization's regulatory compliance, with a special focus on the Microsoft Purview compliance portal and formulating an organization's compliance score.
 abstract: |
   By the end of this module, you will be able to:
-  - Describe the Microsoft Purview Compliance Portal and how to access it
+  - Describe the Microsoft Purview compliance portal and how to access it
   - Describe the purpose and function of the Microsoft Compliance Score
   - Explain how an organization's compliance score is determined
   - Explain how assessments are used to formulate compliance scores
