--- a/learn-m365-pr/m365-developer/msgraph-access-user-data/2-reading-users.yml
+++ b/learn-m365-pr/m365-developer/msgraph-access-user-data/2-reading-users.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.msgraph-access-user-data.2-reading-users
 metadata:
   title: Working with users in the organization
-  description: In this unit, you’ll learn the basics of working with users with Microsoft Graph. Working with users requires a user and app be granted specific permissions, some that can be granted by a user while others must be granted by an administrator.
-  ms.date: 09/13/2021
+  description: In this unit, you'll learn the basics of working with users with Microsoft Graph. Working with users requires a user and app be granted specific permissions, some that can be granted by a user while others must be granted by an administrator.
+  ms.date: 05/17/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
