--- a/learn-m365-pr/m365-developer/msgraph-access-user-data/4-photos-related-users.yml
+++ b/learn-m365-pr/m365-developer/msgraph-access-user-data/4-photos-related-users.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.msgraph-access-user-data.4-photos-related-users
 metadata:
   title: User profile photos and related users
-  description: In this unit, you’ll learn how to get a reference to and download a user’s profile photo and how to get the user’s manager’s profile.
-  ms.date: 09/13/2021
+  description: In this unit, you'll learn how to get a reference to and download a user's profile photo and how to get the user's manager's profile.
+  ms.date: 05/17/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
