--- a/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/index.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-microsoft-defender-for-cloud-apps
 metadata:
   title: Implement app protection by using Microsoft Defender for Cloud Apps
   description: "Implement app protection by using Microsoft Defender for Cloud Apps"
-  ms.date: 05/13/2022
+  ms.date: 05/18/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -30,6 +30,12 @@ roles:
 products:
 - m365
 - office-365
+subjects:
+- business-applications
+- cloud-security
+- information-protection-governance
+- security
+- threat-protection
 units:
 - learn.wwl.implement-microsoft-defender-for-cloud-apps.introduction
 - learn.wwl.implement-microsoft-defender-for-cloud-apps.explore-microsoft-defender-cloud-apps
