changed files by pdets auto publish service, publishid[041e505e-387f-4988-ab9a-c02af9b88ee6] and do [publish].

--- a/learn-m365-pr/wwl/implement-endpoint-protection-use-microsoft-defender/index.yml
+++ b/learn-m365-pr/wwl/implement-endpoint-protection-use-microsoft-defender/index.yml
@@ -29,6 +29,15 @@ roles:
 products:
 - m365
 - office-365
+subjects:
+- cloud-security
+- collaboration
+- communication
+- identity-access
+- information-protection-governance
+- insider-risk
+- security
+- threat-protection
 units:
 - learn.wwl.implement-endpoint-protection-use-microsoft-defender.introduction
 - learn.wwl.implement-endpoint-protection-use-microsoft-defender.explore-microsoft-defender-endpoint
