--- a/learn-m365-pr/m365/manage-surface-hub/index.yml
+++ b/learn-m365-pr/m365/manage-surface-hub/index.yml
@@ -3,14 +3,14 @@ uid: learn-m365-pr.manage-surface-hub
 metadata:
   moduleType: standard
   title: Manage Surface Hub
-  description: In this module, you will learn how to use Teams admin center to review and manage Surface Hub devices. You'll then see how to use Microsoft Endpoint Manager to create, deploy and manage configuration policies.
+  description: In this module, you'll learn how to use Teams admin center to review and manage Surface Hub devices. You'll then see how to use Microsoft Endpoint Manager to create, deploy and manage configuration policies.
   ms.date: 05/12/2022
   author: temanteleary
   ms.author: teleary
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Manage Surface Hub
-summary: In this module, you will learn how to use Teams admin center to review and manage Surface Hub devices. You'll then see how to use Microsoft Endpoint Manager to create, deploy and manage configuration policies.
+summary: In this module, you'll learn how to use Teams admin center to review and manage Surface Hub devices. You'll then see how to use Microsoft Endpoint Manager to create, deploy and manage configuration policies.
 abstract: |
   By the end of this module, you'll be able to:
     - Describe how to manage Surface Hub devices using Teams admin center.
