Applied copy edit changes.

--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/overview-ransomware.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/overview-ransomware.yml
@@ -4,7 +4,7 @@ title: Overview of ransomware
 metadata:
   unitType: learning-content
   title: Overview of ransomware
-  description: ""
+  description: "Learn about ransomware, and how it has grown to prominence over the years."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
