--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/types-attack.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/types-attack.yml
@@ -4,7 +4,7 @@ title: Types of attack
 metadata:
   unitType: learning-content
   title: Types of attack
-  description: ""
+  description: "Ransomware has many different varieties, here you'll learn about each type."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
