--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/introduction.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: Introduction
-  description: ""
+  description: "Learn about the different types of ransomware and the various attack methods that can take place."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
