--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
@@ -17,45 +17,45 @@ quiz:
   questions:
   - content: "Which is the correct definition of ransomware?"
     choices:
-    - content: "Malicious code that steals data and auctions the data off to the highest bidder."
+    - content: "Malicious code that steals data and auctions it off to the highest bidder."
       isCorrect: false
-      explanation: "That's incorrect. Although data is often stolen, data can be sold off to the highest bidder regardless of whether the ransom is paid or not."
-    - content: "Malicious code that allows files to be accessed but important parts are missing until a ransom is paid."
+      explanation: "That's incorrect. Although data is often stolen, it can be sold to the highest bidder whether the ransom is paid or not."
+    - content: "Malicious code that allows files to be accessed, but important parts are missing until a ransom is paid."
       isCorrect: false
       explanation: "That's incorrect. Ransomware doesn't leave files partially encrypted."
-    - content: "Malicious code that blocks access to a computer and/or its files and demands a ransom for the release of the files."
+    - content: "Malicious code that blocks access to a computer and/or its files, and demands a ransom for their release."
       isCorrect: true
       explanation: "That's correct. The files are encrypted, and access is blocked until the ransom is paid."
-  - content: "If a user opens an email and select on a link, which turns out to be malicious, what type of attack is this called?"
+  - content: "If a user opens an email and select a link that turns out to be malicious, what type of attack is this?"
     choices:
     - content: "Phishing Attack"
       isCorrect: true
-      explanation: "That's correct. Known as a social engineering attack, the attacker is relying on a user to select on a link without properly checking it's valid."
+      explanation: "That's correct. Phishing is a social engineering attack, where the attacker relies on a user to select a link without properly checking it's valid."
     - content: "Smishing Attack"
       isCorrect: false
-      explanation: "That's incorrect. A smishing attack uses text messages containing links to fraudulent sites."
+      explanation: "That's incorrect. A smishing attack uses text messages that contain links to fraudulent sites."
     - content: "Vishing Attack"
       isCorrect: false
       explanation: "That's incorrect. Vishing relies on the power of voice to trick a user into divulging information useful to the attacker."
   - content: "Which explanation best describes a ransomware family?"
     choices:
-    - content: "Cybercriminals that use ransomware to disrupt and extort money."
+    - content: "Cybercriminals who use ransomware to disrupt and extort money."
       isCorrect: false
       explanation: "That's incorrect. The alternative term for cybercriminals is ransomware actors."
     - content: "Ransomware code that works in a similar way to other ransomware code."
       isCorrect: true
-      explanation: "That's correct. Certain attacks work in a similar way and have similar code characteristics, which is why they're called ransomware families."
-    - content: "Licensed ransomware that criminals can purchase from other cybercriminals."
+      explanation: "That's correct. Certain attacks work in a similar way and have comparable code characteristics, which is why they're called ransomware families."
+    - content: "Licensed ransomware that cybercriminals can purchase from each other."
       isCorrect: false
-      explanation: "That's incorrect. This is known as Ransomware-as-a-Service and allows criminals who aren't technical to also run attacks."
-  - content: "If an attacker managed to gain control of the computer system of a Water Supply Company and then change the level of additives in the drinking water, what type of attack would this be?"
+      explanation: "That's incorrect. This is known as ransomware-as-a-service and allows cybercriminals who aren't necessarily technically aware to run attacks."
+  - content: "If an attacker managed to gain control of a water supply company's computer system and changed the level of additives in the drinking water, what type of attack would this be?"
     choices:
     - content: "Commodity ransomware"
       isCorrect: false
-      explanation: "That's incorrect. Commodity ransomware relies on a lapse of judgment from an individual to help the attacker either by clicking on a file containing malicious code or by giving away information."
-    - content: "Ransom distributed denial of service attack"
+      explanation: "That's incorrect. Commodity ransomware relies on a lapse of judgment from an individual to help the attacker, either by clicking on a file that contains malicious code, or by giving away information."
+    - content: "Ransom distributed denial-of-service attack"
       isCorrect: false
-      explanation: "That's incorrect. A distributed denial of service attack works by flooding the system with so must information that it effectively grinds to a halt and stops legitimate work being carried out."
-    - content: "Human-Operated ransomware"
+      explanation: "That's incorrect. A distributed denial-of-service attack works by flooding the system with so much information that it effectively grinds to a halt, and stops legitimate work being carried out."
+    - content: "•	Human-operated ransomware"
       isCorrect: true
       explanation: "That's correct. The attacker is specifically targeting a business to maximize the impact on the company and the general public."
