--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/ransomware-families.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/ransomware-families.yml
@@ -4,7 +4,7 @@ title: Ransomware families
 metadata:
   unitType: learning-content
   title: Ransomware families
-  description: ""
+  description: "Ransomware continues to evolve, often by adapting an existing piece of ransomware. When this occurs, it becomes part of a ransomware family."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
