--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/scale-ransomware-problem.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/scale-ransomware-problem.yml
@@ -4,7 +4,7 @@ title: The scale of the ransomware problem
 metadata:
   unitType: learning-content
   title: The scale of the ransomware problem
-  description: ""
+  description: "Understand the impact that ransomware has had on the world."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
