--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/summary.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/summary.yml
@@ -4,7 +4,7 @@ title: Summary
 metadata:
   unitType: summary
   title: Summary
-  description: ""
+  description: "Summarize what you have learned in this module."
   ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
