changed files by pdets auto publish service, publishid[dd0e416c-eb73-4571-b62c-7ddddbd7f218] and do [publish].

--- a/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/index.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-microsoft-defender-for-cloud-apps
 metadata:
   title: Implement app protection by using Microsoft Defender for Cloud Apps
   description: "Implement app protection by using Microsoft Defender for Cloud Apps"
-  ms.date: 05/18/2022
+  ms.date: 05/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -33,6 +33,7 @@ products:
 subjects:
 - business-applications
 - cloud-security
+- device-management
 - information-protection-governance
 - security
 - threat-protection
