Copy Edit with feedback issues addressed

--- a/learn-m365-pr/m365/ransomware-identify-entry-points/describe-ransomware-specialties.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/describe-ransomware-specialties.yml
@@ -4,7 +4,7 @@ title: Describe ransomware specialties
 metadata:
   unitType: learning-content
   title: Describe ransomware specialties
-  description: ""
+  description: "Ransomware isn't a one size fits all cyberattack. As technology has advanced, it has evolved and become more specialized "
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
