--- a/learn-m365-pr/m365/ransomware-identify-entry-points/index.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/index.yml
@@ -2,7 +2,7 @@
 uid: learn-m365.ransomware-identify-entry-points
 metadata:
   moduleType: standard
-  title: Identify ransomware entry points
+  title: Identify vulnerabilities that ransomware can exploit
   description: How will you know if you are a victim of ransomware? This module will cover the top ransomware families for today's threat landscape and the vectors they use to enter and infect your organization's files and systems.
   ms.date: 5/9/2022
   author: beccarobins
