--- a/learn-m365-pr/m365/ransomware-identify-entry-points/ransomware-entry-points.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/ransomware-entry-points.yml
@@ -4,7 +4,7 @@ title: Describe different ransomware entry points
 metadata:
   unitType: learning-content
   title: Describe different ransomware entry points
-  description: ""
+  description: "Learn about different entry points used by cyberattack to breach your security defenses."
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
