Addressed feedback in PR

--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/index.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/index.yml
@@ -23,7 +23,9 @@ iconUrl: /learn/achievements/generic-badge.svg
 levels: 
   - beginner
 roles: 
-  - developer
+  - business-user
+  - student
+  - administrator
 products: 
 - m365
 units:
