--- a/learn-m365-pr/m365-developer/msteams-meetings-apps/1-introduction.yml
+++ b/learn-m365-pr/m365-developer/msteams-meetings-apps/1-introduction.yml
@@ -5,7 +5,7 @@ metadata:
   description: This unit introduces you to the module and explains what you will learn.
   ms.date: 02/04/2022
   author: andrewconnell-msft
-  ms.author: v-johnco
+  ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Introduction
