--- a/learn-m365-pr/m365-developer/msteams-meetings-apps/4-participants-in-meeting-experiences.yml
+++ b/learn-m365-pr/m365-developer/msteams-meetings-apps/4-participants-in-meeting-experiences.yml
@@ -5,7 +5,7 @@ metadata:
   description: Developers creating custom Microsoft Teams meetings apps can implement different experiences for meeting participants depending on the participants role in the meeting and the lifecycle of the meeting. In this section, learn how to use the Microsoft Teams SDK to determine the current lifecycle stage of the meeting and the participant’s role to present context aware experiences to each user.
   ms.date: 05/04/2022
   author: andrewconnell-msft
-  ms.author: v-johnco
+  ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: In-meeting experience & participant roles
