--- a/learn-m365-pr/m365-developer/msteams-meetings-apps/6-post-meeting-experience.yml
+++ b/learn-m365-pr/m365-developer/msteams-meetings-apps/6-post-meeting-experience.yml
@@ -5,7 +5,7 @@ metadata:
   description: The final stage of a Microsoft Teams meetings app is the post-meeting experience. In this scenario, meeting attendees can view a custom app experience in a tab from the meeting invite details. In this unit, you'll learn how you can implement the post-meeting experience for attendees.
   ms.date: 05/04/2022
   author: andrewconnell-msft
-  ms.author: v-johnco
+  ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Implement a post-meeting experience for attendees
