--- a/learn-m365-pr/m365-developer/msteams-meetings-apps/8-summary.yml
+++ b/learn-m365-pr/m365-developer/msteams-meetings-apps/8-summary.yml
@@ -5,7 +5,7 @@ metadata:
   description: This unit summarizes what you learned in this module.
   ms.date: 02/04/2022
   author: andrewconnell-msft
-  ms.author: v-johnco
+  ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Summary
