--- a/learn-m365-pr/m365/create-device-configuration-profiles/9-add-wi-fi-settings.yml
+++ b/learn-m365-pr/m365/create-device-configuration-profiles/9-add-wi-fi-settings.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.create-device-configuration.add-wi-fi-settings
-title: Add Wi-Fi Settings
+title: Add Wi-Fi wettings
 metadata:
   unitType: learning-content
-  title: Add Wi-Fi Settings
+  title: Add Wi-Fi settings
   description: Add Wi-Fi Settings
   ms.date: 05/06/2022
   author: Erikre
