--- a/learn-m365-pr/m365-developer/identity-permissions-consent/2-understand-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/2-understand-permissions-consent.yml
@@ -7,6 +7,8 @@ metadata:
   author: omondiatieno
   ms.author: jomondi
   ms.topic: interactive-tutorial
+  ms.custom:
+  - event-tier1-build-2022
   ms.prod: learning-m365
 title: Understand the permissions and consent framework in the Microsoft identity platform
 durationInMinutes: 10
