--- a/learn-m365-pr/m365-developer/identity-permissions-consent/5-exercise-delegated-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/5-exercise-delegated-permissions-consent.yml
@@ -7,6 +7,8 @@ metadata:
   author: omondiatieno
   ms.author: jomondi
   ms.topic: interactive-tutorial
+  ms.custom:
+  - event-tier1-build-2022
   ms.prod: learning-m365
 title: Exercise - Delegated permissions and consent
 durationInMinutes: 15
