--- a/learn-m365-pr/m365/create-device-configuration-profiles/9-add-wi-fi-settings.yml
+++ b/learn-m365-pr/m365/create-device-configuration-profiles/9-add-wi-fi-settings.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn.create-device-configuration.add-wi-fi-settings
-title: Add Wi-Fi wettings
+title: Add Wi-Fi settings
 metadata:
   unitType: learning-content
   title: Add Wi-Fi settings
